# geometry_utils

./: README.md
lib/: analysis_curvature.py  deformation.py  geometry_graph.py  visualization.py
scripts/: curvature_pca.py
scripts/coherent_point_drift/: curvature_pca.py  getKRing.py  ot_downsampling.py  unitvec2rotmat.py  viz_curvature.py
scripts/functional_map/: README.md  fmap_pcd.py
scripts/functional_map/lbo/: CMakeLists.txt
scripts/nocs/: nocs_cube_map.py  nocs_simple.py
scripts/optimal_transport/: ot_regist.py
